--- a/.github/workflows/android-devops.yml
+++ b/.github/workflows/android-devops.yml
@@ -6,9 +6,14 @@ on:
   pull_request:
   workflow_dispatch:
 
+permissions:
+  contents: read
+  pull-requests: write
+  checks: write
+
 env:
   commonGradleFlags: --parallel --stacktrace --build-cache --no-daemon --warning-mode=summary
-  detektReportPath: ${{ github.workspace }}/build/reports/detekt/detekt.xml
+  detektReportPath: ./build/reports/detekt/detekt.xml
   reviewdogSetup: -f=checkstyle -name="detekt" -level=error -filter-mode=added -tee -fail-on-error=true
 
 jobs:
@@ -22,11 +27,13 @@ jobs:
         uses: actions/checkout@v4
 
       # 2. Cleanup GitHub Actions bot logs
+
+
       - name: Cleanup GitHub Actions bot logs
         if: github.event_name == 'pull_request'
         continue-on-error: true
         run: |
-          bash ./devops-app/scripts/cleanup-gh-bot-logs.sh \
+          bash ./devops/scripts/cleanup-gh-bot-logs.sh \
             "${{ github.repository_owner }}" \
             "${{ github.event.repository.name }}" \
             "${{ github.event.pull_request.number }}" \
