--- a/.github/workflows/android-devops.yml
+++ b/.github/workflows/android-devops.yml
@@ -69,7 +69,7 @@ jobs:
         run: |
           reviewdog $reviewdogSetup -reporter=github-pr-review <$detektReportPath
 
-      # 8. Submitting a Detect report as a GitHub Check
+      # 8. Submitting a Detekt report as a GitHub Check
       - name: Run Reviewdog for Detekt as Github CHECK
         env:
           REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
