Refactor settings detect CI/CD app

--- a/devops/detekt-settings/configurations/detekt-tests.yml
+++ b/devops/detekt-settings/configurations/detekt-tests.yml
@@ -90,7 +90,7 @@ style:
     active: false
   NewLineAtEndOfFile:
     active: false
+
+libraries:
   LibraryEntitiesShouldNotBePublic:
-    active: false
-  FinalNewline:
     active: false
