--- a/devops/detekt-settings/configurations/detekt-tests.yml
+++ b/devops/detekt-settings/configurations/detekt-tests.yml
@@ -58,6 +58,8 @@ formatting:
     layout: '*,java.**,javax.**,kotlin.**,^'
   NoWildcardImports:
     active: true
+  FinalNewline:
+    active: false
 
 naming:
   active: true
@@ -83,12 +85,11 @@ style:
     ignoreEnums: true
     ignoreAnnotation: true
     ignoreCompanionObjectPropertyDeclaration: true
+    ignorePropertyDeclaration: true
   ReturnCount:
     max: 3
     excludeGuardClauses: true
   TrailingWhitespace:
-    active: false
-  NewLineAtEndOfFile:
     active: false
 
 libraries:
