--- a/.github/workflows/android-devops.yml
+++ b/.github/workflows/android-devops.yml
@@ -68,7 +68,7 @@ jobs:
         env:
           REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          reviewdog $reviewdogSetup -reporter=github-pr-review <$detektReportPath
+          reviewdog $reviewdogSetup -Pdetekt.config=$detektConfigPath -reporter=github-pr-review <$detektReportPath
 
       # 8. Submitting a Detekt report as a GitHub Check
       - name: Run Reviewdog for Detekt as Github CHECK
