--- a/.github/workflows/android-devops.yml
+++ b/.github/workflows/android-devops.yml
@@ -75,7 +75,7 @@ jobs:
         env:
           REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          reviewdog $reviewdogSetup -reporter=github-pr-check <$detektReportPath
+          reviewdog $reviewdogSetup -Pdetekt.config=$detektConfigPath -reporter=github-pr-check <$detektReportPath
 
   build:
     name: Build
