--- a/.github/workflows/android-devops.yml
+++ b/.github/workflows/android-devops.yml
@@ -15,7 +15,7 @@ env:
   commonGradleFlags: --parallel --stacktrace --build-cache --no-daemon --warning-mode=summary
   detektConfigPath: devops/detekt-settings/configurations/detekt-tests.yml
   detektReportPath: ./build/reports/detekt/detekt.xml
-  reviewdogSetup: -f=checkstyle -name="detekt" -level=error -filter-mode=file -tee -fail-on-error=true
+  reviewdogSetup: -f=checkstyle -name="detekt" -level=error -tee -fail-on-error=true
 
 jobs:
   tests:
@@ -74,14 +74,14 @@ jobs:
         env:
           REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          reviewdog $reviewdogSetup -reporter=github-pr-review < $detektReportPath
+          reviewdog $reviewdogSetup -filter-mode=added -reporter=github-pr-review < $detektReportPath
 
       # 8. Submitting a Detekt report as a GitHub Check
       - name: Run Reviewdog for Detekt as Github CHECK
         env:
           REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          reviewdog $reviewdogSetup -reporter=github-pr-check < $detektReportPath
+          reviewdog $reviewdogSetup -filter-mode=file -reporter=github-pr-check < $detektReportPath
 
   build:
     name: Build
