--- a/.editorconfig
+++ b/.editorconfig
@@ -3,12 +3,20 @@ root = true
 [*]
 charset = utf-8
 end_of_line = lf
-indent_size = 4
 indent_style = space
+indent_size = 4
 insert_final_newline = true
-max_line_length = 120
 trim_trailing_whitespace = true
-ij_kotlin_imports_layout = *, java.**, javax.**, kotlin.**, kotlinx.android.synthetic.**, ^
+max_line_length = 120
+
+[*.{kt,kts}]
+ij_kotlin_imports_layout = *,java.**,javax.**,kotlin.**,android.**,kotlinx.**,^
+ij_kotlin_name_count_to_use_star_import = 999
+ij_kotlin_name_count_to_use_star_import_for_members = 999
+ij_kotlin_code_style_defaults = KOTLIN_OFFICIAL
+
+ij_continuation_indent_size = 8
+ij_wrap_on_typing = false
 
 [*.md]
 trim_trailing_whitespace = false
