--- a/.github/workflows/android-devops.yml
+++ b/.github/workflows/android-devops.yml
@@ -6,6 +6,10 @@ on:
   pull_request:
   workflow_dispatch:
 
+concurrency:
+    group: ${{ github.workflow }}-${{ github.ref }}
+    cancel-in-progress: true
+
 permissions:
   contents: read
   pull-requests: write
@@ -15,7 +19,7 @@ env:
   commonGradleFlags: --parallel --stacktrace --build-cache --no-daemon --warning-mode=summary
   detektConfigPath: devops/detekt-settings/configurations/detekt-tests.yml
   detektReportPath: ./build/reports/detekt/detekt.xml
-  reviewdogSetup: -f=checkstyle -name="detekt" -level=error -tee -fail-on-error=true
+  reviewdogSetup: -f=checkstyle -name=detekt -level=error -tee -fail-on-error=true
 
 jobs:
   tests:
@@ -23,12 +27,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # 1. Clone repository
       - name: Checkout repository
         uses: actions/checkout@v4
-
-      # 2. Cleanup GitHub Actions bot logs
-
 
       - name: Cleanup GitHub Actions bot logs
         if: github.event_name == 'pull_request'
@@ -41,13 +41,11 @@ jobs:
             "github-actions[bot]" \
             "${{ secrets.GITHUB_TOKEN }}"
 
-      # 3. Install Reviewdog
       - name: Set up Reviewdog
         uses: reviewdog/action-setup@v1
         with:
           reviewdog_version: latest
 
-      # 4. Install JDK
       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
@@ -55,21 +53,23 @@ jobs:
           java-version: '17'
           cache: gradle
 
-      # 5. Make gradlew executable
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
 
-      # 6. Run detekt
       - name: Run detekt
         run: ./gradlew detektAll $commonGradleFlags -Pdetekt.config=$detektConfigPath
 
       - name: Debug detekt report
         run: |
-          echo "report path: $detektReportPath"
-          ls -l $detektReportPath || true
-          sed -n '1,50p' $detektReportPath || true
+            echo "report path: $detektReportPath"
+            if [ -f "$detektReportPath" ]; then
+                ls -l $detektReportPath
+                sed -n '1,50p' $detektReportPath
+            else
+                echo "Detekt report missing"
+                ls -la build/reports/detekt || true
+            fi
 
-      # 7. Submitting a Detekt report to Reviewdog (as a comment in PR)
       - name: Run Reviewdog for Detekt as Github Review
         if: github.event_name == 'pull_request'
         env:
@@ -77,7 +77,6 @@ jobs:
         run: |
           reviewdog $reviewdogSetup -filter-mode=added -reporter=github-pr-review < $detektReportPath
 
-      # 8. Submitting a Detekt report as a GitHub Check
       - name: Run Reviewdog for Detekt as Github CHECK
         if: github.event_name == 'pull_request'
         env:
@@ -90,11 +89,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # 1. Clone repository
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      # 2. Install JDK
       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
@@ -102,15 +99,12 @@ jobs:
           java-version: '17'
           cache: gradle
 
-      # 3. Make gradlew executable
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
 
-      # 4. Add WEATHER_API_KEY в weather.properties
       - name: Create weather.properties
-        run: echo "WEATHER_API_KEY=${{ secrets.WEATHER_API_KEY }}" > weather.properties
+        run: echo "WEATHER_API_KEY=${{ secrets.WEATHER_API_KEY }}" >> $GITHUB_ENV
 
-      # 5. Cache to speed up builds
       - name: Cache Gradle
         uses: actions/cache@v4
         with:
@@ -121,11 +115,9 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-gradle-
 
-      # 6.Build APK
       - name: Build Debug APK
-        run: ./gradlew :app:assembleDebug $commonGradleFlags
+        run: ./gradlew :app:assembleDebug $commonGradleFlags -PweatherApiKey=$WEATHER_API_KEY
 
-      # 7. Downloading APK as an artifact
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
