--- a/.github/workflows/android-devops.yml
+++ b/.github/workflows/android-devops.yml
@@ -102,9 +102,6 @@ jobs:
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
 
-      - name: Create weather.properties
-        run: echo "WEATHER_API_KEY=${{ secrets.WEATHER_API_KEY }}" >> $GITHUB_ENV
-
       - name: Cache Gradle
         uses: actions/cache@v4
         with:
@@ -116,7 +113,9 @@ jobs:
             ${{ runner.os }}-gradle-
 
       - name: Build Debug APK
-        run: ./gradlew :app:assembleDebug $commonGradleFlags -PweatherApiKey=$WEATHER_API_KEY
+        run: ./gradlew :app:assembleDebug $commonGradleFlags
+        env:
+            WEATHER_API_KEY: ${{ secrets.WEATHER_API_KEY }}
 
       - name: Upload APK
         uses: actions/upload-artifact@v4
