--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,20 +1,20 @@
 [versions]
-minSdk = "24"
+minSdk = "25"
 compileSdk = "36"
 targetSdk = "36"
 versionCode = "1"
 versionName = "1.0"
 
-agp = "8.13.0"
+agp = "8.13.1"
 kotlin = "2.2.21"
 coreKtx = "1.17.0"
 
 detekt = "1.23.8"
 
 koin = "4.1.1"
-okhttp = "4.12.0"
-retrofit = "2.9.0"
-gson = "2.10.1"
+okhttp = "5.3.0"
+retrofit = "3.0.0"
+gson = "2.13.2"
 
 junit = "4.13.2"
 junitVersion = "1.3.0"
@@ -25,14 +25,35 @@ activityCompose = "1.11.0"
 composeBom = "2025.11.00"
 appcompat = "1.7.1"
 material = "1.13.0"
+materialV3 = "1.2.1"
+runtimeLivedata = "1.9.4"
+composeMaterial3 = "1.5.5"
+viewModelCompose = "2.9.4"
+material3Pulltorefresh = "1.0.0-alpha06"
+composeAnimation = "1.9.4"
+material3 = "1.4.0"
+material3Version = "1.4.0"
+accompanistPullrefresh = "0.32.0"
+
+coilCompose = "2.7.0"
+vicoCompose = "1.14.0"
+materialIconsExtended = "1.7.8"
+navigationCompose = "2.9.6"
 
 [libraries]
+androidx-compose-material-icons-extended = { module = "androidx.compose.material:material-icons-extended", version.ref = "materialIconsExtended" }
+androidx-navigation-compose = { module = "androidx.navigation:navigation-compose", version.ref = "navigationCompose" }
+coil-compose = { module = "io.coil-kt:coil-compose", version.ref = "coilCompose" }
+vico-compose = { module = "com.patrykandpatrick.vico:compose", version.ref = "vicoCompose" }
+vico-core = { module = "com.patrykandpatrick.vico:core", version.ref = "vicoCompose" }
+
 detekt-analysis-plugin = { module = "io.gitlab.arturbosch.detekt:detekt-gradle-plugin", version.ref = "detekt" }
 detekt-analysis-cli = { module = "io.gitlab.arturbosch.detekt:detekt-cli", version.ref = "detekt" }
 detekt-analysis-formatting = { module = "io.gitlab.arturbosch.detekt:detekt-formatting", version.ref = "detekt" }
 detekt-analysis-libraries = { module = "io.gitlab.arturbosch.detekt:detekt-rules-libraries", version.ref = "detekt" }
 
 koin-android = { module = "io.insert-koin:koin-android", version.ref = "koin" }
+koin-android-compose = { module = "io.insert-koin:koin-androidx-compose", version.ref = "koin" }
 logging-interceptor = { module = "com.squareup.okhttp3:logging-interceptor", version.ref = "okhttp" }
 retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
 converter-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "retrofit" }
@@ -55,6 +76,12 @@ androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit
 androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
 androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
+androidx-compose-runtime-livedata = { group = "androidx.compose.runtime", name = "runtime-livedata", version.ref = "runtimeLivedata" }
+androidx-compose-wear-material3 = { group = "androidx.wear.compose", name = "compose-material3", version.ref = "composeMaterial3" }
+
+androidx-lifecycle-viewmodel-compose = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-compose", version.ref = "viewModelCompose" }
+androidx-compose-animation = { group = "androidx.compose.animation", name = "animation", version.ref = "composeAnimation" }
+androidx-compose-material3 = { group = "androidx.compose.material3", name = "material3", version.ref = "material3Version" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
